Agregar espacios publicitarios para AdSense

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                 <li><a href="guias/index.html">Guías</a></li>
             </ul>
         </nav>
-    </header>
+    </header><div class="container">
+  <div class="ad-slot">
+    Espacio publicitario (AdSense – cabecera)
+  </div>
+</div>
+
     <main>
         <section class="hero">
             <h1>Bienvenido a Chambeador</h1>
@@ -39,7 +44,12 @@
         </section>
         <div class="ad-placeholder">Espacio publicitario</div>
     </main>
-    <footer>
+   <div class="container">
+  <div class="ad-slot">
+    Espacio publicitario (AdSense – final del contenido)
+  </div>
+</div>
+ <footer>
         &copy; 2026 Chambeador. Todos los derechos reservados.
     </footer>
 </body>
